--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<nav id="menu">
-	<nav id="titulo">	Menu Inicial </nav>
+	<div id="titulo">	Menu Inicial </div>
 	</nav>
 	<h1>Testando</h1>
 </body>
