--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 	<title></title>
 </head>
 <body>
+	<!-- Sessão 1 -->
+	<div class="container">
+		<div class="row barra-status">
+	  </div>  
+	</div>
 
 </body>
 </html>
