--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 	<title>InovaForms</title>
 </head>
 <body>
+	<div class="row">
+	  <div class="col s12">
 	<nav id="menu">
-	<div id="titulo">	Menu Inicial </div>
+	<div id="titulo">Menu Inicial </div>
 	</nav>
 	<h1>Testando</h1>
+</div>
+</div>
 </body>
 </html>
