--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 	<title>InovaForms</title>
 </head>
 <body>
-	<div class="row">
-	  	<div class="col s12">
-			<nav id="menu">
-				<div id="titulo">Menu Inicial </div>
-			</nav>
-			<h1>Testando</h1>
+	<nav id="barra-status">
+	<div class="container">
+		<div class="row">
+		  	<div class="col s12">
+					<div id="titulo">Menu Inicial </div>
+				</nav>
+				<h1>Testando</h1>
+			</div>
 		</div>
 	</div>
 </body>
