--- a/index.html
+++ b/index.html
@@ -12,14 +12,33 @@
 	<title>InovaForms</title>
 </head>
 <body>
+	<div class="row">
 	<nav id="barra-status">
+	<div id="titulo">Menu Inicial</div>
+</nav>
 	<div class="container">
-		<div class="row">
-		  	<div class="col s12">
-					<div id="titulo">Menu Inicial</div>
-				</nav>
-			</div>
-		</div>
-	</div>
+	  <div class="row">
+	  	<div class="col s12 ">
+	      <div class=" div-sombra col s5 center-align z-depth-2 shadow-demo menu-cima">
+	      	<img class="responsive-img" src="assets/formulario.png" >
+	      	<h6>Formulário</h6>
+	      </div>
+	      <div class=" div-sombra col s5 center-align z-depth-2 shadow-demo offset-s2 menu-cima">
+	      	<img class="responsive-img" src="assets/paciente.png" >
+	      	<h6>Paciente</h6>
+	      </div>
+	  	</div>
+	  	<div class="row">
+	  	<div class="col s12 ">
+	      <div class=" div-sombra col s5 center-align z-depth-2 shadow-demo menu-baixo">
+	      	<img class="responsive-img" src="assets/sobre.png" >
+	      	<h6>Sobre</h6>
+	      </div>
+	      <div class=" div-sombra col s5 center-align z-depth-2 shadow-demo offset-s2 menu-baixo">
+	      	<img class="responsive-img" src="assets/ajuda.png" >
+	      	<h6>Ajuda</h6>
+	      </div>
+	  	</div>
+	  </div>
 </body>
 </html>
