--- a/index.html
+++ b/index.html
@@ -16,7 +16,23 @@
 	<nav id="barra-status">
 	<div id="titulo">Menu Inicial</div>
 	</nav>
+
 	<div class="container">
+
+	  <div class="row">
+	      <div class="col s4 ">
+	      	<img class="imagens responsive-img left-align" src="assets/perfil.png">
+	      </div>
+	      <div class="col s4 ">
+	      	<nav id="barrinha">
+			</nav>
+	      </div>
+	      <div class="col s4 ">
+	      	<h6>Gabriel Rocha</h6>
+	      	<button>Editar Perfil</button>
+	      </div>
+	  </div>
+
 	  <div class="row">
 	  	<div class="col s12 ">
 	      <div class=" div-sombra col s5 center-align z-depth-2 shadow-demo menu-cima">
@@ -28,6 +44,7 @@
 	      	<h6>Paciente</h6>
 	      </div>
 	  	</div>
+
 	  	<div class="row">
 	  	<div class="col s12 ">
 	      <div class=" div-sombra col s5 center-align z-depth-2 shadow-demo menu-baixo">
@@ -39,6 +56,7 @@
 	      	<h6>Ajuda</h6>
 	      </div>
 	  	</div>
+
 	  </div>
 </body>
 </html>
