--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	      </div>
 	  </div>
 
-	  <div class="row">
+	  <div class="row" id="container3">
 	  	<div class="col s12 ">
 	      <div class=" div-sombra col s5 center-align z-depth-2 shadow-demo menu-cima">
 	      	<img class="responsive-img" src="assets/formulario.png" >
@@ -44,19 +44,20 @@
 	      	<h6>Paciente</h6>
 	      </div>
 	  	</div>
-
-	  	<div class="row">
+</div>
+	  	<div class="row" id="container2">
 	  	<div class="col s12 ">
 	      <div class=" div-sombra col s5 center-align z-depth-2 shadow-demo menu-baixo">
 	      	<img class="responsive-img" src="assets/sobre.png" >
-	      	<h6>Sobre</h6>
+	      	<h5>Sobre</h6>
 	      </div>
 	      <div class=" div-sombra col s5 center-align z-depth-2 shadow-demo offset-s2 menu-baixo">
 	      	<img class="responsive-img" src="assets/ajuda.png" >
-	      	<h6>Ajuda</h6>
+	      	<h5>Ajuda</h5>
 	      </div>
 	  	</div>
 
+	  </div>
 	  </div>
 </body>
 </html>
