--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	  <div class="row">
 	      <div class="col s4 ">
-	      	<img class="imagens responsive-img left-align" src="assets/perfil.png">
+	      	<img class="imagens responsive-img left-align" id="fotopessoa" src="assets/perfil.png">
 	      </div>
 	      <div class="col s4 ">
 	      	<nav id="barrinha">
