--- a/formulario.html
+++ b/formulario.html
@@ -40,24 +40,20 @@
 
 	  <div class="container">
 
-	  <div class="row">
-
-	  	<div class="col s6 ">
-	      	<p>Gerencie e aplique os formulários disponíveis ou crie novos</p>
-	      </div>
-
-	     <div class="col s2 ">
-	      	<nav id="barrinha">
-			</nav>
-	      </div>
-
-	      <div class="col s4 ">
-	      	<img class="imagens responsive-img left-align" src="assets/forms.png">
-	      </div>
-
-	  	  </div>
-
+	  <div class="row" style="background-color: #5ABBE5;">
+		  <div class="col s4 ">
+		      	<img class="imagens responsive-img left-align" src="assets/aplicar.png">
+		      </div>
+		      <div class="col s2 ">
+		      	<nav id="barrinha" style="background-color: white">
+				</nav>
+		      </div>
+		      <div class="col s6 ">
+		      	<h6>Aplicar Formulários</h6>
+		      	<p>Aplique formulários já prontos</p>
+		      </div>
+	    </div>
 	  </div>
-	  
+
 </body>
 </html>
