--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 	      	<h6>Paciente</h6>
 	      </div>
 	  	</div>
+	  </div>
 
 	  	<div class="row">
 	  	<div class="col s12 ">
@@ -56,7 +57,8 @@
 	      	<h6>Ajuda</h6>
 	      </div>
 	  	</div>
-
 	  </div>
+	  
+	</div>
 </body>
 </html>
