--- a/formulario.html
+++ b/formulario.html
@@ -55,5 +55,18 @@
 	    </div>
 	  </div>
 
+	   <div class="row" id="container3">
+	  	<div class="col s12 ">
+	      <div class=" div-sombra col s5 center-align z-depth-2 shadow-demo menu-baixo">
+	      	<img class="responsive-img" src="assets/editarForms.png" >
+	      	<h6>Criar Formulário</h6>
+	      </div>
+	      <div class=" div-sombra col s5 center-align z-depth-2 shadow-demo offset-s2 menu-baixo">
+	      	<img class="responsive-img" src="assets/visualizar.png" >
+	      	<h6>Visualizar Formulário</h6>
+	      </div>
+	  	</div>
+	  </div>
+
 </body>
 </html>
