--- a/formulario.html
+++ b/formulario.html
@@ -55,17 +55,21 @@
 	    </div>
 	  </div>
 
-	   <div class="row" id="container3">
-	  	<div class="col s12 ">
-	      <div class=" div-sombra col s5 center-align z-depth-2 shadow-demo menu-baixo">
-	      	<img class="responsive-img" src="assets/editarForms.png" >
-	      	<h6>Criar Formulário</h6>
-	      </div>
-	      <div class=" div-sombra col s5 center-align z-depth-2 shadow-demo offset-s2 menu-baixo">
-	      	<img class="responsive-img" src="assets/visualizar.png" >
-	      	<h6>Visualizar Formulário</h6>
-	      </div>
-	  	</div>
+	   <div class="container">
+
+	  <div class="row" style="background-color: #30566B;">
+		  <div class="col s4 ">
+		      	<img class="imagens responsive-img left-align" src="assets/visualizar.png">
+		      </div>
+		      <div class="col s2 ">
+		      	<nav id="barrinha" style="background-color: white">
+				</nav>
+		      </div>
+		      <div class="col s6 ">
+		      	<h6 style="color: white">Visualizar Formulários</h6>
+		      	<p>Visualize formulários já preenchidos</p>
+		      </div>
+	    </div>
 	  </div>
 
 </body>
