--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 			</nav>
 	      </div>
 	      <div class="col s4 ">
-	      	<h7>Gabriel Rocha</h7>
-	      	<button>Editar Perfil</button>
+	      	<h7 class="pessoa">Gabriel Rocha</h7>
+	      	<button class="editarperfil">Editar Perfil</button>
 	      </div>
 	  </div>
 
