--- a/formulario.html
+++ b/formulario.html
@@ -22,11 +22,11 @@
 	  <div class="row">
 
 	  	<div class="col s6 ">
-	      	<p>Gerencie e aplique os formulários disponíveis ou crie novos</p>
+	      	<h8>Gerencie e aplique os formulários disponíveis ou crie novos</h8>
 	      </div>
 
 	     <div class="col s2 ">
-	      	<nav id="barrinha">
+	      	<nav id="barrinha3">
 			</nav>
 	      </div>
 
@@ -45,12 +45,12 @@
 		      	<img class="imagens responsive-img left-align" src="assets/aplicar.png">
 		      </div>
 		      <div class="col s2 ">
-		      	<nav id="barrinha" style="background-color: white">
+		      	<nav id="barrinha2" style="background-color: white">
 				</nav>
 		      </div>
 		      <div class="col s6 ">
-		      	<h6>Aplicar Formulários</h6>
-		      	<p>Aplique formulários já prontos</p>
+		      	<h6>Aplicar <p>Formulários</p></h6>
+		      	<h7>Aplique formulários <p> já prontos</p></h7>
 		      </div>
 	    </div>
 	  </div>
@@ -62,12 +62,12 @@
 		      	<img class="imagens responsive-img left-align" src="assets/visualizar.png">
 		      </div>
 		      <div class="col s2 ">
-		      	<nav id="barrinha" style="background-color: white">
+		      	<nav id="barrinha2" style="background-color: white">
 				</nav>
 		      </div>
 		      <div class="col s6 ">
 		      	<h6 style="color: white">Visualizar Formulários</h6>
-		      	<p>Visualize formulários já preenchidos</p>
+		      	<h7 style="color: white">Visualize formulários <p> já preenchidos </p></h7>
 		      </div>
 	    </div>
 	  </div>
