--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 	  	<div class="col s12 ">
 	      <div class=" div-sombra col s5 center-align z-depth-2 shadow-demo menu-cima">
 	      	<img class="responsive-img" src="assets/formulario.png" >
-	      	<h6>Formulário</h6>
+	      	<h6 class="textobotao">Formulários</h6>
 	      </div>
 	      <div class=" div-sombra col s5 center-align z-depth-2 shadow-demo offset-s2 menu-cima">
 	      	<img class="responsive-img" src="assets/paciente.png" >
-	      	<h6>Paciente</h6>
+	      	<h6 class="textobotao">Pacientes</h6>
 	      </div>
 	  	</div>
 	  </div>
@@ -53,11 +53,11 @@
 	  	<div class="col s12 ">
 	      <div class=" div-sombra col s5 center-align z-depth-2 shadow-demo menu-baixo">
 	      	<img class="responsive-img" src="assets/sobre.png" >
-	      	<h5>Sobre</h6>
+	      	<h5 class="textobotao">Sobre</h5>
 	      </div>
 	      <div class=" div-sombra col s5 center-align z-depth-2 shadow-demo offset-s2 menu-baixo">
 	      	<img class="responsive-img" src="assets/ajuda.png" >
-	      	<h5>Ajuda</h5>
+	      	<h5 class="textobotao">Ajuda</h5>
 	      </div>
 	  	</div>
 	  </div>
