--- a/forms_Aplicar.html
+++ b/forms_Aplicar.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<script type="text/javascript" src="js/main.js"></script>
 	<script  src="js/main.js"></script>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<meta charset="utf-8">
 	<title>InovaForms</title>
 </head>
@@ -19,8 +20,21 @@
 	</nav>
 
 	<div class="container">
+		<div class="row">
+	      <div class="col s12">
+	      	<h2>Questionário de Impacto no Assoalho Pélvico</h2>
+	      </div>
+	      <div class="col s12">
+	      	<h4>Dados:</h4>
+	      	<p>7 perguntas com 4 alternativas para cada área afetada.</p>
+	      </div>
+	      <div class="col s12">
+	      	<h4>Instruções:</h4>
+	      	<p>Para cada pergunta, marque a resposta que melhor descreva o quanto as atividades, relacionamentos ou sentimentos da sua paciente têm sido afetados pelos sintomas ou condições de sua bexiga, intestino ou vagina, nos últimos 3 meses. </p>
+	      </div>
 
-
+	      <a class="btn"><i class="material-icons left">arrow_forward</i><div class="col s2 "><nav id="barrinha"></nav></div>Prosseguir para aplicaçao</a>
+	  </div>
 	</div>
 
 	  
