--- a/forms_visualizar.html
+++ b/forms_visualizar.html
@@ -15,7 +15,7 @@
 	<div class="row">
 	<nav id="barra-status">
 	<div id="titulo">Formulários</div>
-	<div id="titulo"><h6>Visualizar</h6></div>
+	<div id="titulo"><h5>Visualizar</h5></div>
 	</nav>
 
 	<div class="container">
@@ -23,11 +23,11 @@
 	  <div class="row">
 
 	  	<div class="col s6 ">
-	      	<p>Armazene na nuvem e gerencie os formulários aplicados</p>
+	      	<h8>Armazene na nuvem e gerencie os formulários aplicados</h8>
 	      </div>
 
 	     <div class="col s2 ">
-	      	<nav id="barrinha">
+	      	<nav id="barrinha3">
 			</nav>
 	      </div>
 
@@ -46,12 +46,12 @@
 		      	<img class="imagens responsive-img left-align" src="assets/gerenciar.png">
 		      </div>
 		      <div class="col s2 ">
-		      	<nav id="barrinha" style="background-color: white">
+		      	<nav id="barrinha2" style="background-color: white">
 				</nav>
 		      </div>
 		      <div class="col s6 ">
-		      	<h6>Gerenciar Formulários</h6>
-		      	<p>Edite ou exclua os seus formulários</p>
+		      	<h6>Gerenciar <p>Formulários</p></h6>
+		      	<h7>Edite ou exclua <p>os seus formulários</p></h7>
 		      </div>
 	    </div>
 	  </div>
@@ -63,12 +63,12 @@
 		      	<img class="imagens responsive-img left-align" src="assets/upload.png">
 		      </div>
 		      <div class="col s2 ">
-		      	<nav id="barrinha" style="background-color: white">
+		      	<nav id="barrinha2" style="background-color: white">
 				</nav>
 		      </div>
 		      <div class="col s6 ">
-		      	<h6 style="color: white">Fazer Upload</h6>
-		      	<p>Envie seus formulários para a núvem</p>
+		      	<h6 style="color: white">Fazer <p> Upload </p></h6>
+		      	<h7 style="color: white">Envie seus <p>formulários para a nuvem</p></h7>
 		      </div>
 	    </div>
 	  </div>
