--- a/forms_aplicar_conclusao2.html
+++ b/forms_aplicar_conclusao2.html
@@ -15,6 +15,7 @@
 	<div class="row">
 	<nav id="barra-status">
 	<div id="titulo">Formulários</div>
+	<div id="titulo"><h1>Aplicar</h1></div>
 	</nav>
 
 	<div class="container">
