--- a/forms_resultado.html
+++ b/forms_resultado.html
@@ -15,7 +15,7 @@
 	<div class="row">
 	<nav id="barra-status">
 	<div id="titulo">Formulários</div>
-	<div id="titulo"><h1>Aplicar</h1></div>
+	<div id="titulo"><h1>Resultados</h1></div>
 	</nav>
 
 	<div class="container">
@@ -23,10 +23,18 @@
 	  <div class="row">
 
 	  	<div class="col s12 ">
-	      	<img class="imagens responsive-img left-align" src="assets/conclusão.png">
+	      	<h2>BASFI- Espondilite Anquilosante </h2>
 	    </div>
 	    <div class="col s12 ">
-	      	<h4>Aplicação do questionário concluída</h4>
+	      	<p><b>Paciente:</b> Antônio Carlos da Silva</p>
+	    </div>
+
+	    <div class="col s6 ">
+	      	<p><b>Pontuação:</b> 4 pontos</p>
+	    </div>
+
+	    <div class="col s12 ">
+	      	<p><b>Explicação do Resultado:</b> Pontuação obtida a partir da média aritmética dos valores, variando entre 0 e 10.</p>
 	    </div>
 
 	    <div class="col s12 ">
