formulario assoalho pelvico parte 3

--- a/src formulario aplicar/forms_Aplicar_pelvico2.html
+++ b/src formulario aplicar/forms_Aplicar_pelvico2.html
@@ -5,7 +5,7 @@
 	<script src="js/jquery-3.5.0.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="../css/style.css">
 	<script type="text/javascript" src="js/main.js"></script>
 	<script  src="js/main.js"></script>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -24,6 +24,10 @@
 
 	      <div class="col s12">
 	      	<h2>Questionário de Impacto no Assoalho Pélvico</h2>
+	      </div>
+
+	      <div class="col s12">
+	      	<h6>Condições ou sintomas que afetam o paciente em relação a:</h6>
 	      </div>
 
 	      <form>
@@ -50,8 +54,7 @@
 	      	<div class="col s12">
 	      		<textarea></textarea>
 	      	</div>
-
-	      	</form>
+	      </form>
 
 	      <div class="col s12">
 
