--- a/src formulario aplicar/forms_Aplicar_Espondilete.html
+++ b/src formulario aplicar/forms_Aplicar_Espondilete.html
@@ -5,7 +5,7 @@
 	<script src="js/jquery-3.5.0.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="../css/style.css">
 	<script type="text/javascript" src="js/main.js"></script>
 	<script  src="js/main.js"></script>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -22,15 +22,15 @@
 	<div class="container">
 		<div class="row">
 	      <div class="col s12">
-	      	<h2>Questionário de Impacto no Assoalho Pélvico</h2>
+	      	<h2>BASFI- Espondilite Anquilosante</h2>
 	      </div>
 	      <div class="col s12">
 	      	<h4>Dados:</h4>
-	      	<p>7 perguntas com 4 alternativas para cada área afetada.</p>
+	      	<p>10 perguntas com alternativas em escalas variando de 0 a 10.</p>
 	      </div>
 	      <div class="col s12">
 	      	<h4>Instruções:</h4>
-	      	<p>Para cada pergunta, marque a resposta que melhor descreva o quanto as atividades, relacionamentos ou sentimentos da sua paciente têm sido afetados pelos sintomas ou condições de sua bexiga, intestino ou vagina, nos últimos 3 meses. </p>
+	      	<p>Para cada pergunta, marque a resposta que melhor descreva o quanto o paciente considera o nível de dificuldade para a realização das atividades entre os níveis fácil e impossível.</p>
 	      </div>
 
 	      <a class="btn"><i class="material-icons left">arrow_forward</i><div class="col s2 "><nav id="barrinha"></nav></div>Prosseguir para aplicaçao</a>
