--- a/src formulario aplicar/forms_Aplicar_pelvico.html
+++ b/src formulario aplicar/forms_Aplicar_pelvico.html
@@ -5,7 +5,7 @@
 	<script src="js/jquery-3.5.0.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="../css/style.css">
 	<script type="text/javascript" src="js/main.js"></script>
 	<script  src="js/main.js"></script>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
