--- a/src formulario concluido/forms_conclusao.html
+++ b/src formulario concluido/forms_conclusao.html
@@ -5,9 +5,9 @@
 	<script src="js/jquery-3.5.0.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-	<link rel="stylesheet" href="css/style.css">
-	<script type="text/javascript" src="js/main.js"></script>
-	<script  src="js/main.js"></script>
+	<link rel="stylesheet" href="../css/style.css">
+	<script type="text/javascript" src="../js/main.js"></script>
+	<script  src="../js/main.js"></script>
 	<meta charset="utf-8">
 	<title>InovaForms</title>
 </head>
@@ -23,7 +23,7 @@
 	  <div class="row">
 
 	  	<div class="col s12 ">
-	      	<img class="imagens responsive-img left-align" src="assets/conclusão.png">
+	      	<img class="imagens responsive-img left-align" src="../assets/conclusão.png">
 	    </div>
 	    <div class="col s12 ">
 	      	<h4>Aplicação do questionário concluída</h4>
