--- a/src formulario concluido/forms_resultado.html
+++ b/src formulario concluido/forms_resultado.html
@@ -5,9 +5,9 @@
 	<script src="js/jquery-3.5.0.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-	<link rel="stylesheet" href="css/style.css">
-	<script type="text/javascript" src="js/main.js"></script>
-	<script  src="js/main.js"></script>
+	<link rel="stylesheet" href="../css/style.css">
+	<script type="text/javascript" src="../js/main.js"></script>
+	<script  src="../js/main.js"></script>
 	<meta charset="utf-8">
 	<title>InovaForms</title>
 </head>
@@ -15,7 +15,7 @@
 	<div class="row">
 	<nav id="barra-status">
 	<div id="titulo">Formulários</div>
-	<div id="titulo"><h1>Aplicar</h1></div>
+	<div id="titulo"><h1>Resultados</h1></div>
 	</nav>
 
 	<div class="container">
@@ -23,15 +23,22 @@
 	  <div class="row">
 
 	  	<div class="col s12 ">
-	      	<img class="imagens responsive-img left-align" src="assets/conclusão.png">
+	      	<h2>BASFI- Espondilite Anquilosante </h2>
 	    </div>
 	    <div class="col s12 ">
-	      	<h4>Aplicação do questionário concluída</h4>
+	      	<p><b>Paciente:</b> Antônio Carlos da Silva</p>
+	    </div>
+
+	    <div class="col s6 ">
+	      	<p><b>Pontuação:</b> 4 pontos</p>
+	    </div>
+
+	    <div class="col s12 ">
+	      	<p><b>Explicação do Resultado:</b> Pontuação obtida a partir da média aritmética dos valores, variando entre 0 e 10.</p>
 	    </div>
 
 	    <div class="col s12 ">
 	      	<button>Voltar ao início</button>
-	      	<button>Visualizar resultado</button>
 	    </div>
 
 	  </div>
