menu inferior e botão de voltar adicionados na pagina de formularios

--- a/formulario.html
+++ b/formulario.html
@@ -5,6 +5,7 @@
 	<script src="js/jquery-3.5.0.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css">
 	<script type="text/javascript" src="js/main.js"></script>
 	<script  src="js/main.js"></script>
@@ -13,10 +14,30 @@
 </head>
 <body>
 	<div class="row">
-	<nav id="barra-status">
-	<div id="titulo">Formulários</div>
-	</nav>
+		<nav id="barra-status">
+			<a href="index.html" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a>
+		<div id="titulo">Formulários</div>
+		</nav>
+	</div>
+	<!--inicio do menu inferior-->
+	<div class="footer-fixed">
+		<footer class="red lighten-2">
+			<nav class="z-depth-0">
+				<div class="nav-wrapper">
+					<ul class="justify">
+						<li><a href="#!"><img src="assets/icon-home.png" class="img-icon"></a></li>
+						<li><a href="#!"><img src="assets/icon_forms.png" class="img-icon"></a></li>
+						<li><a class="active" href="#test3"><img src="assets/icon_paciente.png" class="img-icon"></a></li>
+						<li><a href="#!"><img src="assets/icon_ajuda.png" class="img-icon"></a></li>
+						<li><a href="#!"><img src="assets/icon_sobre.png" class="img-icon"></a></li>
+					</ul>
+				</div>
+			</nav>
+		</footer>
+	</div>
+	<!--fim do menu inferior-->
 
+	<!-- inicio banner formulário-->
 	<div class="container">
 
 	  <div class="row">
@@ -37,40 +58,44 @@
 	  	  </div>
 
 	  </div>
+	  <!--fim banner formulário-->
 
+	  <!--inicio botão aplicar formulário-->
 	  <div class="container">
-
-	  <div class="row" style="background-color: #5ABBE5;">
-		  <div class="col s4 ">
-		      	<img class="imagens responsive-img left-align" src="assets/aplicar.png">
-		      </div>
-		      <div class="col s2 ">
-		      	<nav id="barrinha2" style="background-color: white">
-				</nav>
-		      </div>
-		      <div class="col s6 ">
-		      	<h6>Aplicar <p>Formulários</p></h6>
-		      	<h7>Aplique formulários <p> já prontos</p></h7>
-		      </div>
-	    </div>
+	  	<div class="row" style="background-color: #5ABBE5;">
+	  		<div class="col s4 ">
+	  			<img class="imagens responsive-img left-align" src="assets/aplicar.png">
+	  		</div>
+	  		<div class="col s2 ">
+	  			<nav id="barrinha2" style="background-color: white">
+	  			</nav>
+	  		</div>
+	  		<div class="col s6 ">
+	  			<h6>Aplicar <p>Formulários</p></h6>
+	  			<h7>Aplique formulários <p> já prontos</p></h7>
+	  		</div>
+	  	</div>
 	  </div>
-
+	  <!--fim botão aplicar formulário-->
+	  
+	  <!--inicio botão visualizar formulário-->
 	   <div class="container">
 
-	  <div class="row" style="background-color: #30566B;">
-		  <div class="col s4 ">
-		      	<img class="imagens responsive-img left-align" src="assets/visualizar.png">
-		      </div>
-		      <div class="col s2 ">
-		      	<nav id="barrinha2" style="background-color: white">
-				</nav>
-		      </div>
-		      <div class="col s6 ">
-		      	<h6 style="color: white">Visualizar Formulários</h6>
-		      	<h7 style="color: white">Visualize formulários <p> já preenchidos </p></h7>
-		      </div>
-	    </div>
+	   	<div class="row" style="background-color: #30566B;">
+	   		<div class="col s4 ">
+	   			<img class="imagens responsive-img left-align" src="assets/visualizar.png">
+	   		</div>
+	   		<div class="col s2 ">
+	   			<nav id="barrinha2" style="background-color: white">
+	   			</nav>
+	   		</div>
+	   		<div class="col s6 ">
+	   			<h6 style="color: white">Visualizar Formulários</h6>
+	   			<h7 style="color: white">Visualize formulários <p> já preenchidos </p></h7>
+	   		</div>
+	   	</div>
 	  </div>
+	  <!--fim botão visualizar formulário-->
 
 </body>
 </html>
