colocando links nos botoes

--- a/formulario.html
+++ b/formulario.html
@@ -25,8 +25,8 @@
 			<nav class="z-depth-0">
 				<div class="nav-wrapper">
 					<ul class="justify">
-						<li><a href="#!"><img src="assets/icon-home.png" class="img-icon"></a></li>
-						<li><a href="#!"><img src="assets/icon_forms.png" class="img-icon"></a></li>
+						<li><a href="index.html"><img src="assets/icon-home.png" class="img-icon"></a></li>
+						<li><a href="formulario.html"><img src="assets/icon_forms.png" class="img-icon"></a></li>
 						<li><a class="active" href="#test3"><img src="assets/icon_paciente.png" class="img-icon"></a></li>
 						<li><a href="#!"><img src="assets/icon_ajuda.png" class="img-icon"></a></li>
 						<li><a href="#!"><img src="assets/icon_sobre.png" class="img-icon"></a></li>
@@ -62,7 +62,7 @@
 
 	  <!--inicio botão aplicar formulário-->
 	  <div class="container">
-	  	<div class="row" style="background-color: #5ABBE5;">
+	  	<a href="src formulario aplicar/forms_Aplicar.html"><div class="row" style="background-color: #5ABBE5;">
 	  		<div class="col s4 ">
 	  			<img class="imagens responsive-img left-align" src="assets/aplicar.png">
 	  		</div>
@@ -74,10 +74,10 @@
 	  			<h6>Aplicar <p>Formulários</p></h6>
 	  			<h7>Aplique formulários <p> já prontos</p></h7>
 	  		</div>
-	  	</div>
+	  	</div></a>
 	  </div>
 	  <!--fim botão aplicar formulário-->
-	  
+
 	  <!--inicio botão visualizar formulário-->
 	   <div class="container">
 
