--- a/src formulario aplicar/forms_Aplicar_pelvico2.html
+++ b/src formulario aplicar/forms_Aplicar_pelvico2.html
@@ -58,7 +58,7 @@
 
 	      <div class="col s12">
 
-	      <button>Avançar</button>
+	      <a href="forms_Aplicar_pelvico3.html" ><button>Avançar</button></a>
 	  </div>
 
 	</div>
