--- a/src formulario aplicar/forms_Aplicar_pelvico3.html
+++ b/src formulario aplicar/forms_Aplicar_pelvico3.html
@@ -322,7 +322,7 @@
 
 
 	    <div class="col s12">
-	    	<button>Avançar</button>
+	    	<a href="forms_Aplicar_pelvico4.html" ><button>Avançar</button></a>
 	  	  </div>
 	    </div>
 	</div>
