colocando links nos botoes de voltar e prosseguir dos formularios

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 </head>
 <body>
 	<div class="row">
-	<nav id="barra-status">
-	<div id="titulo">Menu Inicial</div>
-	</nav>
-
+		<nav id="barra-status">
+		<div id="titulo">Menu Inicial</div>
+		</nav>
+	</div>
+	
 	<div class="container">
 
 	  <div class="row">
