--- a/src formulario aplicar/forms_Aplicar_pelvico4.html
+++ b/src formulario aplicar/forms_Aplicar_pelvico4.html
@@ -14,10 +14,12 @@
 </head>
 <body>
 	<div class="row">
-	<nav id="barra-status">
-	<div id="titulo">Formulários</div>
-	<div id="titulo"><h1>Aplicar</h1></div>
-	</nav>
+		<nav id="barra-status">
+		<a href="forms_Aplicar_pelvico3.html" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a>
+		<div id="titulo">Formulários</div>
+		<div id="titulo"><h1>Aplicar</h1></div>
+		</nav>
+	</div>
 
 	<div class="container">
 		<div class="row">
@@ -417,7 +419,7 @@
 
 
 	    <div class="col s12">
-	    	<button>Avançar</button>
+	    	<a href="forms_Aplicar_Espondilete.html"><button>Avançar</button></a>
 	  	  </div>
 	    </div>
 	</div>
