--- a/src formulario aplicar/forms_Aplicar_Espondilete.html
+++ b/src formulario aplicar/forms_Aplicar_Espondilete.html
@@ -14,11 +14,12 @@
 </head>
 <body>
 	<div class="row">
-	<nav id="barra-status">
-	<div id="titulo">Formulários</div>
-	<div id="titulo"><h1>Aplicar</h1></div>
-	</nav>
-
+		<nav id="barra-status">
+		<a href="forms_Aplicar_pelvico4.html" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a>
+		<div id="titulo">Formulários</div>
+		<div id="titulo"><h1>Aplicar</h1></div>
+		</nav>
+	</div>
 	<div class="container">
 		<div class="row">
 	      <div class="col s12">
@@ -33,7 +34,7 @@
 	      	<p>Para cada pergunta, marque a resposta que melhor descreva o quanto o paciente considera o nível de dificuldade para a realização das atividades entre os níveis fácil e impossível.</p>
 	      </div>
 
-	      <a class="btn"><i class="material-icons left">arrow_forward</i><div class="col s2 "><nav id="barrinha"></nav></div>Prosseguir para aplicaçao</a>
+	      <a class="btn" href="forms_Aplicar_Espondilete2.html"><i class="material-icons left">arrow_forward</i><div class="col s2 "><nav id="barrinha"></nav></div>Prosseguir para aplicaçao</a>
 	  </div>
 	</div>
 
