--- a/src formulario aplicar/forms_Aplicar_pelvico.html
+++ b/src formulario aplicar/forms_Aplicar_pelvico.html
@@ -14,11 +14,13 @@
 </head>
 <body>
 	<div class="row">
-	<nav id="barra-status">
-	<div id="titulo">Formulários</div>
-	<div id="titulo"><h1>Aplicar</h1></div>
-	</nav>
-
+		<nav id="barra-status">
+		<a href="#" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a>
+		<div id="titulo">Formulários</div>
+		<div id="titulo"><h1>Aplicar</h1></div>
+		</nav>
+	</div>
+	
 	<div class="container">
 		<div class="row">
 	      <div class="col s12">
