adicionando menu e botao de voltar na tela de visualizar forms

--- a/formulario.html
+++ b/formulario.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="row">
 		<nav id="barra-status">
-			<a href="index.html" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a>
+		<a href="index.html" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a>
 		<div id="titulo">Formulários</div>
 		</nav>
 	</div>
@@ -82,7 +82,7 @@
 	  <!--inicio botão visualizar formulário-->
 	   <div class="container">
 
-	   	<div class="row" style="background-color: #30566B;">
+	   	<a href="forms_visualizar.html"><div class="row" style="background-color: #30566B;">
 	   		<div class="col s4 ">
 	   			<img class="imagens responsive-img left-align" src="assets/visualizar.png">
 	   		</div>
@@ -94,7 +94,7 @@
 	   			<h6 style="color: white">Visualizar Formulários</h6>
 	   			<h7 style="color: white">Visualize formulários <p> já preenchidos </p></h7>
 	   		</div>
-	   	</div>
+	   	</div></a>
 	  </div>
 	  <!--fim botão visualizar formulário-->
 
