--- a/src formulario aplicar/forms_Aplicar.html
+++ b/src formulario aplicar/forms_Aplicar.html
@@ -14,11 +14,12 @@
 </head>
 <body>
 	<div class="row">
-	<nav id="barra-status">
-	<div id="titulo">Formulários</div>
-	<div id="titulo"><h1>Aplicar</h1></div>
-	</nav>
-
+		<nav id="barra-status">
+		<a href="#" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a>
+		<div id="titulo">Formulários</div>
+		<div id="titulo"><h1>Aplicar</h1></div>
+		</nav>
+	</div>
 	<div class="container">
 		<div class="row">
 	      <div class="col s12">
@@ -33,7 +34,7 @@
 	      	<p>Para cada pergunta, marque a resposta que melhor descreva o quanto as atividades, relacionamentos ou sentimentos da sua paciente têm sido afetados pelos sintomas ou condições de sua bexiga, intestino ou vagina, nos últimos 3 meses. </p>
 	      </div>
 
-	      <a class="btn"><i class="material-icons left">arrow_forward</i><div class="col s2 "><nav id="barrinha"></nav></div>Prosseguir para aplicaçao</a>
+	      <a class="btn" href="#"><i class="material-icons left">arrow_forward</i><div class="col s2 "><nav id="barrinha"></nav></div>Prosseguir para aplicaçao</a>
 	  </div>
 	</div>
 
