--- a/src formulario aplicar/forms_Aplicar_Espondilete2.html
+++ b/src formulario aplicar/forms_Aplicar_Espondilete2.html
@@ -87,7 +87,7 @@
 			</div>
 
 			<div class="col s12">
-				<button>Avançar</button>
+				<a href="#"></a><button>Avançar</button>
 			</div>
 	  </div>
 
