--- a/formulario.html
+++ b/formulario.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="row">
 		<nav id="barra-status">
-		<a href="index.html" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a>
+		<a href="index.html" class="waves-effect waves-light btn"><i class="material-icons center">chevron_left</i></a>
 		<div id="titulo">Formulários</div>
 		</nav>
 	</div>
