--- a/forms_visualizar.html
+++ b/forms_visualizar.html
@@ -13,21 +13,19 @@
 	<title>InovaForms</title>
 </head>
 <body>
-	<div class="row">
 		<nav id="barra-status">
-		<a href="index.html" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a>
 		<div id="titulo">Formulários</div>
 		<div id="titulo"><h5>Visualizar</h5></div>
+		<a href="javascript:void(0)" onClick="history.go(-1); return false;" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a> 
 		</nav>
-	</div>
 
 	<!--inicio do menu inferior-->
 	<div class="footer-fixed">
-		<footer class="red lighten-2">
+		<footer >
 			<nav class="z-depth-0">
-				<div class="nav-wrapper">
+				<div class="nav-wrapper" style="background-color: #30566B; border-top-left-radius: 30px; border-top-right-radius: 30px;">
 					<ul class="justify">
-						<li><a href="index.html"><img src="assets/icon-home.png" class="img-icon"></a></li>
+						<li><a href="index.html"><img src="assets/icon-home.png" class="img-icon" ></a></li>
 						<li><a href="formulario.html"><img src="assets/icon_forms.png" class="img-icon"></a></li>
 						<li><a class="active" href="#test3"><img src="assets/icon_paciente.png" class="img-icon"></a></li>
 						<li><a href="#!"><img src="assets/icon_ajuda.png" class="img-icon"></a></li>
