--- a/forms_visualizar.html
+++ b/forms_visualizar.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="row">
 		<nav id="barra-status">
-		<a href="index.html" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a>
+		<a href="formulario.html" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a>
 		<div id="titulo">Formulários</div>
 		<div id="titulo"><h5>Visualizar</h5></div>
 		</nav>
