--- a/src formulario aplicar/forms_Aplicar.html
+++ b/src formulario aplicar/forms_Aplicar.html
@@ -5,40 +5,30 @@
 	<script src="js/jquery-3.5.0.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="../css/style.css">
 	<script type="text/javascript" src="js/main.js"></script>
 	<script  src="js/main.js"></script>
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<meta charset="utf-8">
 	<title>InovaForms</title>
 </head>
 <body>
 	<div class="row">
 		<nav id="barra-status">
-		<a href="#" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a>
+		<a href="../formulario.html" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a>
 		<div id="titulo">Formulários</div>
-		<div id="titulo"><h1>Aplicar</h1></div>
+		<div id="titulo"><h5>Aplicar</h5></div>
 		</nav>
 	</div>
+
 	<div class="container">
 		<div class="row">
-	      <div class="col s12">
-	      	<h2>Questionário de Impacto no Assoalho Pélvico</h2>
-	      </div>
-	      <div class="col s12">
-	      	<h4>Dados:</h4>
-	      	<p>7 perguntas com 4 alternativas para cada área afetada.</p>
-	      </div>
-	      <div class="col s12">
-	      	<h4>Instruções:</h4>
-	      	<p>Para cada pergunta, marque a resposta que melhor descreva o quanto as atividades, relacionamentos ou sentimentos da sua paciente têm sido afetados pelos sintomas ou condições de sua bexiga, intestino ou vagina, nos últimos 3 meses. </p>
-	      </div>
-
-	      <a class="btn" href="#"><i class="material-icons left">arrow_forward</i><div class="col s2 "><nav id="barrinha"></nav></div>Prosseguir para aplicaçao</a>
-	  </div>
+			<div class="col s12">
+				
+			</div>
+		</div>
 	</div>
 
-	  
 
 </body>
 </html>
