formulario aplicacao com barra de busca

--- a/src formulario aplicar/forms_Aplicar.html
+++ b/src formulario aplicar/forms_Aplicar.html
@@ -15,19 +15,69 @@
 <body>
 	<div class="row">
 		<nav id="barra-status">
-		<a href="../formulario.html" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a>
 		<a href="javascript:void(0)" onClick="history.go(-1); return false;" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a>
 		<div id="titulo">Formulários</div>
 		<div id="titulo"><h5>Aplicar</h5></div>
 		</nav>
 	</div>
-
+	<!--inicio barra de pesquisa-->
 	<div class="container">
 		<div class="row">
-			<div class="col s12">
-				
+			<div class="col s6 barra-busca">
+				<h6>Busca por área</h6>
+				<form>
+					<input type="text" name="" size="20" placeholder="Toque para buscar" class="campo-busca">
+				</form>
+			</div>
+
+			<div class="col s6 barra-busca">
+				<a class="waves-effect waves-light btn"><i class="material-icons left">search</i></a>
 			</div>
 		</div>
+		<!--fim barra de pesquisa-->
+		<!--inicio categorias-->
+		<div class="row">
+			<div class="col s6 categorias" style="display: inline-block">
+				<img src="../assets/icon_star.png">
+				<h6 style="display: inline-block">Fisioterapia</h6>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col s6 categorias" style="display: inline-block">
+				<img src="../assets/icon_star.png">
+				<h6 style="display: inline-block">Medicina</h6>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col s6 categorias" style="display: inline-block">
+				<img src="../assets/icon_star.png">
+				<h6 style="display: inline-block">Enfermagem</h6>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col s6 categorias" style="display: inline-block">
+				<img src="../assets/icon_star.png">
+				<h6 style="display: inline-block">Pediatria</h6>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col s6 categorias" style="display: inline-block">
+				<img src="../assets/icon_star.png">
+				<h6 style="display: inline-block">Psicologia</h6>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col s6 categorias" style="display: inline-block">
+				<img src="../assets/icon_star.png">
+				<h6 style="display: inline-block">Odontologia</h6>
+			</div>
+		</div>
+		<!--fim categorias-->
 	</div>
 
 
