formulario aplicacao espondilite finalizado

--- a/src formulario aplicar/forms_Aplicar.html
+++ b/src formulario aplicar/forms_Aplicar.html
@@ -36,12 +36,12 @@
 		</div>
 		<!--fim barra de pesquisa-->
 		<!--inicio categorias-->
-		<div class="row">
+		<a href="forms_aplicar_fisioterapia.html"><div class="row">
 			<div class="col s6 categorias" style="display: inline-block">
 				<img src="../assets/icon_star.png">
 				<h6 style="display: inline-block">Fisioterapia</h6>
 			</div>
-		</div>
+		</div></a>
 
 		<div class="row">
 			<div class="col s6 categorias" style="display: inline-block">
