--- a/src formulario aplicar/forms_Aplicar_Espondilete.html
+++ b/src formulario aplicar/forms_Aplicar_Espondilete.html
@@ -7,7 +7,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	<link rel="stylesheet" href="../css/style.css">
 	<script type="text/javascript" src="js/main.js"></script>
-	<script  src="js/main.js"></script>
+	<script  src="../js/main.js"></script>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<meta charset="utf-8">
 	<title>InovaForms</title>
@@ -15,7 +15,7 @@
 <body>
 	<div class="row">
 		<nav id="barra-status">
-		<a href="forms_Aplicar_pelvico4.html" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a>
+		<a href="forms_aplicar_fisioterapia.html" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a>
 		<div id="titulo">Formulários</div>
 		<div id="titulo"><h1>Aplicar</h1></div>
 		</nav>
