--- a/src formulario aplicar/forms_Aplicar_Espondilete3.html
+++ b/src formulario aplicar/forms_Aplicar_Espondilete3.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="row">
 		<nav id="barra-status">
-		<a href="forms_Aplicar_Espondilete.html" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a>
+		<a href="forms_Aplicar_Espondilete2.html" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a>
 		<div id="titulo">Formulários</div>
 		<div id="titulo"><h1>Aplicar</h1></div>
 		</nav>
@@ -28,7 +28,7 @@
 			</div>
 
 			<div class="col s12">
-				<h6>1. Colocar meias e amarrar sapatos sem ajuda ou auxílio :</h6>
+				<h6>6. Ficar em pé por 10 minutos sem desconforto:</h6>
 			</div>
 			<div class="col s12" >
 				<div class="range-wrap">
@@ -38,7 +38,7 @@
 			</div>
 
 			<div class="col s12">
-				<h6>2. Pegar uma caneta no chão sem ajuda, partindo da posição em pé:</h6>
+				<h6>7. Subir 12 ou 15 degraus sem auxílio de corrimão ou apoio de outra pessoa:</h6>
 			</div>
 			<div class="col s12" >
 				<div class="range-wrap">
@@ -48,7 +48,7 @@
 			</div>
 
 			<div class="col s12">
-				<h6>3. Alcançar uma prateleira acima da sua cabeça, sem ajuda:</h6>
+				<h6>8. Olhar por cima do ombro sem virar o corpo:</h6>
 			</div>
 			<div class="col s12" >
 				<div class="range-wrap">
@@ -58,7 +58,7 @@
 			</div>
 
 			<div class="col s12">
-				<h6>4. Levantar de uma cadeira sem braços, sem a ajuda das próprias mãos ou ajuda de outros:</h6>
+				<h6>9. Fazer atividades físicas (exercícios de fisioterapia, cuidar do jardim, praticar algum esporte):</h6>
 			</div>
 			<div class="col s12" >
 				<div class="range-wrap">
@@ -68,7 +68,7 @@
 			</div>
 
 			<div class="col s12">
-				<h6>5. Da posição de deitado no chão, consegue levantar-se sem ajuda:</h6>
+				<h6>10. Fazer atividades que durem o dia todo, seja em casa ou no trabalho:</h6>
 			</div>
 			<div class="col s12" >
 				<div class="range-wrap">
@@ -78,7 +78,7 @@
 			</div>
 
 			<div class="col s12">
-				<a href="forms_Aplicar_Espondilete3.html"><button>Avançar</button></a>
+				<a href="../src formulario concluido/forms_conclusao2.html"><button>Avançar</button></a>
 			</div>
 	  </div>
 
