--- a/src formulario aplicar/forms_aplicar_fisioterapia.html
+++ b/src formulario aplicar/forms_aplicar_fisioterapia.html
@@ -42,19 +42,19 @@
 		</div>
 		<!--fim barra de pesquisa-->
 		<!--inicio categorias-->
-		<div class="row">
+		<a href="forms_Aplicar_pelvico.html"><div class="row">
 			<div class="col s6 categorias" style="display: inline-block">
 				<img src="../assets/icon_star.png">
 				<h6 style="display: inline-block">Questionário de Impacto  no Assoalho Pélvico</h6>
 			</div>
-		</div>
+		</div></a>
 
 		<div class="row">
-			<div class="col s6 categorias" style="display: inline-block">
+			<a href="forms_Aplicar_Espondilete.html"><div class="col s6 categorias" style="display: inline-block">
 				<img src="../assets/icon_star.png">
 				<h6 style="display: inline-block">BASFI- Espondilite Anquilosante</h6>
 			</div>
-		</div>
+		</div></a>
 
 		<div class="row">
 			<div class="col s6 categorias" style="display: inline-block">
