--- a/src formulario concluido/forms_conclusao2.html
+++ b/src formulario concluido/forms_conclusao2.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 	<link rel="stylesheet" href="../css/style.css">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<script type="text/javascript" src="../js/main.js"></script>
 	<script  src="../js/main.js"></script>
 	<meta charset="utf-8">
@@ -13,11 +14,12 @@
 </head>
 <body>
 	<div class="row">
-	<nav id="barra-status">
-	<div id="titulo">Formulários</div>
-	<div id="titulo"><h1>Aplicar</h1></div>
-	</nav>
-
+		<nav id="barra-status">
+			<a href="../src formulario aplicar/forms_Aplicar_Espondilete3.html" class="waves-effect waves-light btn"><i class="material-icons left">chevron_left</i></a>
+		<div id="titulo">Formulários</div>
+		<div id="titulo"><h1>Aplicar</h1></div>
+		</nav>
+	</div>
 	<div class="container">
 
 	  <div class="row">
@@ -30,8 +32,8 @@
 	    </div>
 
 	    <div class="col s12 ">
-	      	<button>Voltar ao início</button>
-	      	<button>Visualizar resultado</button>
+	      	<a href="../formulario.html"><button>Voltar ao início</button></a>
+	      	<a href="../src formulario concluido/forms_resultado.html"><button>Visualizar resultado</button></a>
 	    </div>
 
 	  </div>
